applications/user-service/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polaris-api
  namespace: polaris-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polaris-api
  template:
    metadata:
      labels:
        app: polaris-api
    spec:
      containers:
      - name: api
        image: polaris-api:1.0
        ports:
          - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
