applications/user-service/k8s/deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: user-service
    namespace: polaris-apps
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: user-service
    template:
      metadata:
        labels:
          app: user-service
      spec:
        containers:
        - name: user-service
          image: user-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
