applications/user-service/k8s/api-serverice.yaml
apiVersion: v1
kind: Service
metadata:
  name: polaris-api
  namespace: polaris-apps
spec:
  type: ClusterIP
  selector:
    app: polaris-api
  ports:
    - port: 80
      targetPort: 8000
