applications/user-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-api
  namespace: polaris-apps
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 80
      targetPort: 8000
